@@ -49,7 +49,7 @@
     </repositories>
 
     <properties>
-        <java.version>23</java.version>
+        <java.version>24</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -61,9 +61,6 @@
                 <configuration>
                     <release>${java.version}</release>
                     <encoding>${project.build.sourceEncoding}</encoding>
-                    <compilerArgs>
-                        --enable-preview
-                    </compilerArgs>
                     <parameters>true</parameters>
                     <annotationProcessorPaths>
                         <path>
@@ -77,9 +74,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>--enable-preview</argLine>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
